--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </body>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCwjwltaoAT-PbUiB1VyDzNfcP6TYUw1_s&language=ja"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCwjwltaoAT-PbUiB1VyDzNfcP6TYUw1_s&language=ja"></script>
   <!-- https://qiita.com/Haruka-Ogawa/items/997401a2edcd20e61037 -->
   <script src="js/main.js"></script>
 </html>
