コメント、CSS追加

--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>都道府県ゲッサー</title>
-    <style>
-      html {
-        height: 100%;
-      }
-      body {
-        height: 100%;
-      }
-      #map {
-        height: 70%;
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="map"></div>
@@ -76,13 +65,12 @@
       </select>
       <button id="guess">GUESS!</button><br />
       <button id="restart">再抽選</button><br />
+    </div>
+    <div id="points-container">
       <span id="answer">答え：</span>
-
-      <div id="points-container">
-        <div id="first-point">1回目のポイント：</div>
-        <div id="second-point">2回目のポイント：</div>
-        <div id="third-point">3回目のポイント：</div>
-      </div>
+      <div id="first-point">1回目のポイント：</div>
+      <div id="second-point">2回目のポイント：</div>
+      <div id="third-point">3回目のポイント：</div>
     </div>
   </body>
 
