CSS変更、ユーザー名追加

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <div id="map"></div>
     <div id="user-container">
-      <p>ユーザー名</p>
-      <img src="" alt="" />
+      <span>ユーザー名：</span><input type="text" />
     </div>
     <div id="answer-container">
       <select id="pref">
