--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </div>
 
     <!-- モーダルを開いた時の外側のレイヤー -->
+    <!-- https://webcreatetips.com/coding/3681/ -->
     <div class="over-lay"></div>
 
     <div class="wrapper">
@@ -97,6 +98,10 @@
         <button class="modal-close-btn">再挑戦</button>
       </div>
     </div>
+    出典:<a href="https://nlftp.mlit.go.jp/">「位置参照情報」(国土交通省)</a
+    >の加工情報・<a href="https://geoapi.heartrails.com/"
+      >「HeartRails Geo API」(HeartRails Inc.)
+    </a>
   </body>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
