--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div id="ranking-container">
       <div id="ranking">
-        <span>オンラインランキング1位</span>
+        <span>👑オンラインランキング1位👑</span>
         <p>ユーザー名: <span id="user"></span></p>
         <span>ファーストポイント: <span id="ranking-first-point"></span></span
         ><br />
